# animal

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  INSTALL.txt  Makefile.am  README.md  README.txt  TODO.txt  autogen.sh  configure.ac
animal/: CMakeLists.txt  Makefile.am  Makefile.in  adjacency.c  adjacency.h  analysis.c  analysis.h  animal-config.h  animal.h  annimg.c  annimg.h  array.c  array.h  common.c  common.h  config.h.in  distmap-cuisenaire-orig.c  distmap-cuisenaire.c  distmap-eggers.c  distmap-lz.c  distmaps.c  distmaps.h  filtering.c  filtering.h  hello.c  hello.h  ift.c  ift.h  ift_pqueue.c  ift_pqueue.h  img.c  img.h  img_g.c_incl  img_g.h  morphology.c  morphology.h  plist.c  plist.h  pstk.c  pstk.h  (+10 more)
animal/base/: allocate.c  allocate.h  bit_array.c  bit_array.h  err.c  err.h  err_trace.c  err_trace.h  memory_stack.c  memory_stack.h  misc_defs.c  misc_defs.h  misc_error.c  misc_error.h
config/: Makefile.am  acinclude.m4  animal-config.in  animal.pc.in
src/: EXAMPLE.txt  Makefile.am  Makefile.in  circle.c  distance_transform.c  find.c  hello.c  img.c  imshow.c  io.c  label_components.c  misc.c  plist.c  sedr.c  skl.c  txtsee.c  watershed.c
